--- a/subscription_form/public/index.html
+++ b/subscription_form/public/index.html
@@ -2,6 +2,7 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
+<script src="Request.js"></script>
 
 <div class="container col-10 col-sm-6 col-xs-12">
     <p id="message" class="alert alert-danger"></p>
@@ -27,9 +28,8 @@
     <tr>
         <th>Name</th>
         <th>Email</th>
-        <th></th>
+        <th colspan="2"></th>
     </tr>
 </table>
 
-<script src="Request.js"></script>
 <script src="script.js"></script>
