--- a/subscription_form/public/edit.html
+++ b/subscription_form/public/edit.html
@@ -3,12 +3,17 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <style>
     body {
         background: rgb(224, 255, 212);
     }
 </style>
 <script src="Request.js"></script>
+
+<div class="container">
+    <a href="./" class="btn btn-info">home</a>
+</div>
 
 <div class="container col-10 col-sm-6 col-xs-12">
     <p id="message" class="alert alert-danger"></p>
